--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "mortal-online-france",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
     "next": "15.4.6",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
+    "tailwindcss": "^4",
+    "vitest": "^2.1.4"
   }
 }
