--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DISCORD_CLIENT_ID=1209314735959449681
 DISCORD_CLIENT_SECRET=FM2d4J6XqCrcY3bu6ti9ZI6vtuhefvH7
 NEXTAUTH_SECRET=
 ADMIN_IDS=
+SUPERADMIN_IDS=
