--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DISCORD_CLIENT_ID=1209314735959449681
 DISCORD_CLIENT_SECRET=FM2d4J6XqCrcY3bu6ti9ZI6vtuhefvH7
 NEXTAUTH_SECRET=mortalonlinefrance
 ADMIN_IDS=112288484521172992
-
+SUPERADMIN_IDS=1209314735959449681
 DATABASE_URL="file:./dev.db"
