feat: integrate firebase with firestore

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ NEXTAUTH_SECRET=mortalonlinefrance
 ADMIN_IDS=
 SUPERADMIN_IDS=112288484521172992
 DATABASE_URL="file:./dev.db"
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
