--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
+    "firebase": "^12.1.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.14.0",
@@ -23,8 +24,8 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4",
-    "vitest": "^2.1.4",
-    "prisma": "^6.14.0"
+    "vitest": "^2.1.4"
   }
 }
