Move Firebase config to environment

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@ NEXTAUTH_SECRET=mortalonlinefrance
 ADMIN_IDS=
 SUPERADMIN_IDS=112288484521172992
 DATABASE_URL="file:./dev.db"
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAZYvk65BLqVF4cQtUsYolJj2ZVse7wXzk
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=mortalonlinefrance.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://mortalonlinefrance-default-rtdb.europe-west1.firebasedatabase.app
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=mortalonlinefrance
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=mortalonlinefrance.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=570030196419
+NEXT_PUBLIC_FIREBASE_APP_ID=1:570030196419:web:045276b9dfb132a8b4c476
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-H2DG7F8KLP
