--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DISCORD_CLIENT_ID=1209314735959449681
 DISCORD_CLIENT_SECRET=FM2d4J6XqCrcY3bu6ti9ZI6vtuhefvH7
 NEXTAUTH_URL=https://mortal-online-france.vercel.app/api/auth/callback/discord
 NEXTAUTH_SECRET=mortalonlinefrance
-ADMIN_IDS=
+ADMIN_IDS=112288484521172992
 SUPERADMIN_IDS=112288484521172992
 DATABASE_URL="file:./dev.db"
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAZYvk65BLqVF4cQtUsYolJj2ZVse7wXzk
