--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DISCORD_CLIENT_ID=1209314735959449681
 DISCORD_CLIENT_SECRET=FM2d4J6XqCrcY3bu6ti9ZI6vtuhefvH7
-NEXTAUTH_URL=https://mortal-online-france.vercel.app/api/auth/callback/discord
+# Base URL of your site (without trailing slash)
+NEXTAUTH_URL=https://mortal-online-france.vercel.app
 NEXTAUTH_SECRET=mortalonlinefrance
 ADMIN_IDS=112288484521172992
 SUPERADMIN_IDS=112288484521172992
