--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ NEXTAUTH_URL=https://mortal-online-france.vercel.app
 NEXTAUTH_SECRET=mortalonlinefrance
 ADMIN_IDS=112288484521172992
 SUPERADMIN_IDS=112288484521172992
+# Local SQLite database for development
 DATABASE_URL="file:./dev.db"
+# On Vercel, override with a writable path like:
+# DATABASE_URL="file:/tmp/dev.db"
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAZYvk65BLqVF4cQtUsYolJj2ZVse7wXzk
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=mortalonlinefrance.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://mortalonlinefrance-default-rtdb.europe-west1.firebasedatabase.app
